--- a/put/index.html
+++ b/put/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<div class="logo-container">
 			<img src="./img/car.jpg" alt="logo"/>
-        <h4 class="logo">CherieCars</h4>
+         <li><a class="logo" href="/home/olena/Desktop/put/index.html">CherieCars</a></li>
     </div>
 
     <nav>
